Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL)
Description
The following stack trace could cause reduced performance in cases when the speculative read-ahead is futile, and some useful pages are evicted as a result:
|
10.5 |
buf_LRU_get_free_block
|
buf_page_init_for_read
|
buf_read_page_low
|
buf_read_page_background
|
btr_cur_prefetch_siblings
|
It could be more useful to only attempt read-ahead if a free block is available in the buffer pool without evicting any page that:
- is not marked as freed, or
- is not marked as dirty
Furthermore, we should probably avoid read-ahead altogether for temporary tables.
Attachments
Issue Links
- relates to
-
MDEV-26782 InnoDB temporary tablespace: reclaiming of free space does not work
-
- Closed
-